Service.yml
kind: Service                             
apiVersion: v1
metadata:
  name: yogis
  labels:
    app: yogis
spec:
  ports:
    - port: 8010
      #protocol: TCP         
      targetPort: 80                    
      #nodePort: 31201
  selector:
    app: yogis                   
    #type: NodePort
